<resources>
    <string name="app_name">Recordo</string>
    <string name="title_sono">Sonomètre</string>
    <string name="title_recording">Recording</string>
    <string name="title_presets">Presets</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_presets">ActivityPresets</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="instruments_ajouter">Ajouter un instrument&#8230;</string>
    <string name="instrument_button_add">Ajouter</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>


    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_recording">RecordingActivity</string>
    <string name="title_home">Home</string>
    <string name="decibels">Décibels :</string>
    <string name="nom_du_groupe">Nom du groupe</string>
    <string name="instrument_1">Instrument 1</string>
    <string name="_0_db">0 dB</string>
    <string name="ici_ce_sera_le_graphe">Ici ce sera le graphe</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test_settings">Settings</string>
    <string name="nomInstrument">nomInstrument</string>
    <string name="nomPreset">nomPreset</string>
    <string name="nbdB">NbdB</string>
</resources>
