<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_sono"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_sono"
            />

        <item
            android:id="@+id/navigation_recording"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/title_recording" />

        <item
            android:id="@+id/navigation_presets"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/title_presets" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_settings"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/title_settings" />
    </group>


</menu>
