<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.RecordingFragment">

    <TextView
        android:id="@+id/textViewNbreDecibels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-49dp"
        android:layout_marginLeft="-49dp"
        android:layout_marginTop="348dp"
        android:layout_toEndOf="@+id/textView3"
        android:layout_toRightOf="@id/textView3"
        android:text="@string/_0_db"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="88dp"
        android:text="@string/ici_ce_sera_le_graphe"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textViewDecibels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="104dp"
        android:layout_marginLeft="104dp"
        android:layout_marginTop="348dp"
        android:text="@string/decibels"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/sonometre_goto_preset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="17dp"
        android:text="Voir Preset"
        android:textColor="#fff"
        android:textSize="@dimen/default_text_size"
        android:background="@drawable/button_radius_accent_color"
        style="?android:attr/borderlessButtonStyle"
        android:layout_margin="@dimen/default_margin"
        android:padding="@dimen/default_large_margin"/>

</RelativeLayout>